--- a/pages/dev-machine.html
+++ b/pages/dev-machine.html
@@ -50,9 +50,12 @@ order: 3
         <ul class="arrow-list">
           <li><b>Sur leur domaine de compétences</b> : commerce, projets, technique</li>
           <li><b>Générationnelle</b> : 1/2 génération d'écart entre chacun d'eux</li>
-          <li><b>1 femme et 2 hommes</b></li>
+          <li><b>Mixité</b> : 1 femme et 2 hommes</li>
         </ul>
-        <p class="text-justify">Ce socle "valeurs - complémentarité" reste le moteur du développement de DEVmachine : l'exigence et le sens du service apportent la qualité nécessaire, le collectif décide et l'équipe DEVmachine partage un lieu de travail où il fait bon vivre.</p>
+        <blockquote class="dm-quote">
+          Nous avons co-créé DEVmachine pour libérer les énergies au service de notre engagement client, et partager au quotidien un lieu où il fait bon vivre.
+          <div class="quote-authors">Manon, Sébastien, Vincent</div>
+        </blockquote>
       </div>
     </div>
   </div>
