--- a/pages/offre.html
+++ b/pages/offre.html
@@ -186,7 +186,7 @@ order: 1
             <div class="desc-on-hover">"CTO as a Service" : architecture, développement, déploiement et infogérance d'une solution innovante</div>
           </div>
           <div class="logo-entreprise">
-            <img alt="IFIP" src="/assets/images/website/page-offre/prestations/logos/2/ifip.jpg" />
+            <img alt="IFIP" src="/assets/images/website/page-offre/prestations/logos/2/ifip.png" />
             <span class="info-icon">i</span>
             <div class="desc-on-hover">Développement forfaitaire d'une application mobile de diagnostic</div>
           </div>
@@ -258,7 +258,7 @@ order: 1
             <div class="desc-on-hover">Etude d'impacts d'un changement de socle technologique pour des applications Web existantes</div>
           </div>
           <div class="logo-entreprise">
-            <img alt="SIPF" src="/assets/images/website/page-offre/prestations/logos/4/sipf.jfif" />
+            <img alt="SIPF" src="/assets/images/website/page-offre/prestations/logos/4/sipf.png" />
             <span class="info-icon">i</span>
             <div class="desc-on-hover">
               Evolution et migration progressive d'un existant via une solution d'authentification<br>
