fix: logos cooperl colors

--- a/pages/offre.html
+++ b/pages/offre.html
@@ -247,8 +247,8 @@ order: 1
             <span class="info-icon">i</span>
             <div class="desc-on-hover">Refactoring progressif des applications pour désengorger la dette technique</div>
           </div>
-          <div class="logo-entreprise bg-blue">
-            <img alt="Cooperl" src="/assets/images/website/page-offre/prestations/logos/4/cooperl.svg" />
+          <div class="logo-entreprise">
+            <img alt="Cooperl" src="/assets/images/website/page-offre/prestations/logos/4/cooperl.png" />
             <span class="info-icon">i</span>
             <div class="desc-on-hover">Réalisation de migrations techiques en environnement Java</div>
           </div>
@@ -312,8 +312,8 @@ order: 1
         </ul>
 
         <div class="row logo-entreprise-container">
-          <div class="logo-entreprise bg-blue">
-            <img alt="Cooperl" src="/assets/images/website/page-offre/prestations/logos/6/cooperl.svg" />
+          <div class="logo-entreprise">
+            <img alt="Cooperl" src="/assets/images/website/page-offre/prestations/logos/6/cooperl.png" />
             <span class="info-icon">i</span>
             <div class="desc-on-hover">
               Gestion des déploiements, mise en place et maintenance d'une solution de monitoring, gestion de clusters Kubernetes managés<br>
