feature(rse): add bureau du coeur to rse page

--- a/pages/dev-machine.html
+++ b/pages/dev-machine.html
@@ -322,7 +322,7 @@ order: 3
         <p class="title mb-0 mr-3">Sociétal</p>
       </div>
       <div class="rse-subitems">
-        <span class="col-md-6 col-sm-12 info">
+        <span class="col-md-4 col-sm-12 info">
           <p>Insertion professionnelle</p>
           <span class="info-icon">i</span>
           <div class="rse-onhover-items">
@@ -332,13 +332,23 @@ order: 3
             </div>
           </div>
         </span>
-        <span class="col-md-6 col-sm-12 info">
+        <span class="col-md-4 col-sm-12 info">
           <p>Lutte contre l'exclusion</p>
           <span class="info-icon">i</span>
           <div class="rse-onhover-items">
             <div class="with-img">
               <img alt="" src="/assets/images/website/page-dm/rse/logos/face.png" />
               <p>Depuis sa création, DEVmachine reverse sa taxe d’apprentissage à l’association <a href="https://www.fondationface.org/" target="_blank">FACE</a> (Fondation Agir Contre l’Exclusion).</p>
+            </div>
+          </div>
+        </span>
+        <span class="col-md-4 col-sm-12 info">
+          <p>Accueil solidaire</p>
+          <span class="info-icon">i</span>
+          <div class="rse-onhover-items">
+            <div class="with-img">
+              <img alt="" src="/assets/images/website/page-dm/rse/logos/bureaux-du-coeur.png" />
+              <p>DEVmachine participe à l'action des <a href="https://www.bureauxducoeur.org/" target="_blank">Bureaux du coeur </a> en mettant à disposition ses locaux les soirs et weekends.</p>
             </div>
           </div>
         </span>
