feature(assets): update anticipa logo to innozh

--- a/pages/dev-machine.html
+++ b/pages/dev-machine.html
@@ -176,7 +176,7 @@ order: 3
           <ul class="arrow-list"><li><b>Institutionnels</b></li></ul>
           <div class="logos-container">
             <img title="Le Poool" alt="Le Poool" src="/assets/images/website/page-dm/local/institutionnels/poool.png" />
-            <img title="Anticipa" alt="Anticipa" src="/assets/images/website/page-dm/local/institutionnels/anticipa.png" />
+            <img title="Innôzh" alt="Innôzh" src="/assets/images/website/page-dm/local/institutionnels/innozh.png" />
             <img title="Bretagne Développement Innovation" alt="Bretagne Développement Innovation" src="/assets/images/website/page-dm/local/institutionnels/bdi.png" />
             <img title="Produit en Bretagne" alt="Produit en Bretagne" src="/assets/images/website/page-dm/local/institutionnels/produit-bretagne2.png" />
           </div>
