chore(template): text improvements

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ exclude-nav: true
       <div class="col-md-6 col-sm-12">
         <div class="intro-bg">
           <h1 class="section-heading">Un nouvel esprit de collaboration</h1>
-          <p class="text-grey"><b>DEVmachine est une Software Factory</b><br/>Nous construisons des plateformes Web, des applications mobiles et des systèmes d’informations de qualité, en mettant en place des équipes pluridisciplinaires dédiées.
+          <p class="text-grey"><b>DEVmachine est une Agence de développement logiciel</b><br/>Nous construisons des plateformes Web, des applications mobiles et des systèmes d’informations de qualité, en mettant en place des équipes pluridisciplinaires dédiées.
           </p>
         </div>
 
@@ -35,7 +35,7 @@ exclude-nav: true
 <section id="index-b2b">
   <div class="container">
     <div class="row">
-      <h1 class="section-heading">Construction de solutions B2B / B2C</h1>
+      <h1 class="section-heading">Constructeurs de solutions numériques B2B / B2C</h1>
       <h2 class="section-subheading">Une vision 360° de l’usage à l’exploitation</h2>
     </div>
 
