--- a/pages/dev-machine.html
+++ b/pages/dev-machine.html
@@ -151,19 +151,6 @@ order: 3
 
     <hr />
 
-    <div class="row align-items-center dm-item">
-      <div class="col-md-8 col-sm-12">
-        <h2>Des clients majoritairement bretons</h2>
-        <p class="text-justify">Nos clients sont majoritairement présents sur le territoire breton : Ille-et-Vilaine, Côtes d’Armor, Morbihan, Loire-Atlantique.</p>
-        <p>Par opportunité, nous développons aussi nos savoir-faire dans d’autres régions (Île-de-France, Rhône-Alpes, Paca), et les exportons même sur d’autres continents (Océanie et Afrique).</p>
-      </div>
-      <div class="col-md-3 offset-md-1 col-sm-12 text-center">
-        <img class="w-100" alt="" src="/assets/images/website/page-dm/servir/Map.svg"/>
-      </div>
-    </div>
-
-    <hr />
-
     <div class="row align-items-center dm-item sm-remove-img">
       <div class="col-md-3 col-sm-12 text-center">
         <img class="w-100" alt="" src="/assets/images/website/page-dm/servir/Handshake.svg"/>
@@ -305,10 +292,17 @@ order: 3
           <div class="rse-onhover-items shift-left">
             
             <div class="with-img">
-              <img alt="" src="/assets/images/website/page-dm/rse/logos/timefortheplanet.png" />
+              <ul style="list-style-type: none;">
+                <li>
+                  <img alt="" src="/assets/images/website/page-dm/rse/logos/teamfortheplanet.png" />
+                </li>
+                <li>
+                  <img alt="" src="/assets/images/website/page-dm/rse/logos/marathon-vert.png" />
+                </li>
+              </ul>
               <ul class="arrow-list">
-                <li>Depuis 2021, DEVmachine est actionnaire du fonds d’investissement <a href="https://www.time-planet.com/fr" target="_blank">Time For The Planet</a> pour financer des programmes en faveur de la lutte contre le réchauffement climatique.</li>
-                <li>DEVmachine a participé pour la 1ère fois au Marathon Vert de Rennes en 2021 : "1km parcouru = 1 arbre planté"</li>
+                <li>Depuis 2021, DEVmachine est actionnaire du fonds d’investissement <a href="https://www.team-planet.com/fr" target="_blank">Team For The Planet</a> pour financer des programmes en faveur de la lutte contre le réchauffement climatique.</li>
+                <li>DEVmachine a participé plusieurs fois au Marathon Vert de Rennes : "1km parcouru = 1 arbre planté"</li>
             </ul>
             </div>
           </div>
