--- a/index.html
+++ b/index.html
@@ -11,7 +11,15 @@ exclude-nav: true
       <div class="col-md-6 col-sm-12">
         <div class="intro-bg">
           <h1 class="section-heading">Constructeurs de solutions numériques</h1>
-          <p class="text-grey"><b>DEVmachine est une Agence de développement logiciel</b><br/>Nous construisons des plateformes Web, des applications mobiles et des systèmes d’informations de qualité, en mettant en place des équipes pluridisciplinaires dédiées.
+          <p class="text-grey">
+            <span>
+              <b>DEVmachine est une Agence de développement logiciel basée à Rennes </b>
+              <a href="/dev-machine#dm-servir">
+                <img class="brittany" src="/assets/images/gwenn_ha_du.svg"/>
+              </a>
+            </span>
+          <br/>
+            Nous construisons des plateformes Web, des applications mobiles et des systèmes d’informations de qualité, en mettant en place des équipes pluridisciplinaires dédiées.
           </p>
         </div>
 
