feat: add new lead dev job offer

--- a/pages/recrutement.html
+++ b/pages/recrutement.html
@@ -38,6 +38,46 @@ order: 6
     </div>
 
     <div class="col-12 recrutement-posts">
+
+      <!-- OFFRE LEAD -->
+      <div class="col-lg-6 col-md-12 m-0 p-3">
+        <div class="recrutement-post h-100">
+          <div class="heading">
+            <p class="title">Lead Développeur</p>
+          </div>
+
+          <div class="d-flex contract-data">
+            <span class="contract-location">
+              <img alt="" src="/assets/images/website/page-recrutement/pin.svg">Rennes
+            </span>
+            <span class="contract-cdi">CDI</span>
+            <span class="contract-full-time">Temps complet</span>
+          </div>
+
+          <span class="description">
+            Afin de renforcer notre équipe, nous recherchons un développeur lead .Intégré à des projets à taille humaine dans nos locaux, vous aurez en charge :
+            <ul class="arrow-list">
+              <li>le développement applicatif dans une approche full-stack</li>
+              <li>la contribution, au sein du collectif, à la mise en place et à l’amélioration des pratiques de développement pour le projet</li>
+              <li>la prise en charge de chantiers techniques spécifiques au projet, selon vos aspirations et vos compétences.</li>
+            </ul>
+          </span>
+
+          <!-- div vide pour pousser le btn en bas -->
+          <div class="empty-space"></div>
+
+          <div class="btn-container">
+            <a class="dm-btn dm-btn-orange" target="_blank" href="https://lepoool.tech/offres-d-emploi/recHSDUQsHCqqeLaH/">
+              Lire l'annonce<span aria-hidden="true" class="fas fa-external-link-alt"></span>
+            </a>
+            <a class="dm-btn dm-btn-white postuler" href="mailto:contact@devmachine.fr">
+              <p>Postuler</p>
+              <img alt="" src="/assets/images/website/page-recrutement/Mail.svg" />
+            </a>
+          </div>
+        </div>
+      </div>
+
       <!-- OFFRE 1 -->
       <div class="col-lg-6 col-md-12 m-0 p-3">
         <div class="recrutement-post h-100">
