feat: replace `360 vision` with `editor vision` infos

--- a/index.html
+++ b/index.html
@@ -42,24 +42,8 @@ exclude-nav: true
 <!-- B2B / B2C -->
 <section id="index-b2b">
   <div class="container">
-    <div class="row">
-      <h1 class="section-heading">Une vision 360° de l’usage à l’exploitation</h1>
-    </div>
-
-    <div class="row align-items-center mt-5">
-      <div class="col-md-7 offset-md-1 col-sm-12">
-        <ul class="arrow-list">
-          <li>Définition de solution logicielle / définition de produit</li>
-          <li>UX/UI</li>
-          <li>Architecture</li>
-          <li>Développement logiciel</li>
-          <li>Déploiement</li>
-          <li>Maintenance / Infogérance</li>
-        </ul>
-      </div>
-      <div class="col-md-3 offset-md-0 col-sm-6 offset-sm-3">
-        <img class="w-100" alt="" src="/assets/images/website/page-index/B2B/Project-development.svg"/>
-      </div>
+    <div>
+      <img class="w-100" alt="" src="/assets/images/website/page-index/B2B/vision-editeur.svg"/>
     </div>
   </div>
   <img class="leaf" alt="" src="/assets/images/website/page-index/piliers/Leaves.svg" />
