fix: adjusts `vision editeur` image
- decrease size to 75%
- center the image

--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@ exclude-nav: true
 <!-- B2B / B2C -->
 <section id="index-b2b">
   <div class="container">
-    <div>
-      <img class="w-100" alt="" src="/assets/images/website/page-index/B2B/vision-editeur.svg"/>
+    <div class="row d-flex justify-content-center">
+      <img class="w-75" alt="" src="/assets/images/website/page-index/B2B/vision-editeur.svg"/>
     </div>
   </div>
   <img class="leaf" alt="" src="/assets/images/website/page-index/piliers/Leaves.svg" />
