feat: add le-poool-french-tech in `servir` section

--- a/pages/dev-machine.html
+++ b/pages/dev-machine.html
@@ -211,6 +211,24 @@ order: 3
       </div>
     </div>
 
+    <div class="row align-items-center dm-item sm-reverse">
+      <div class="col-md-4 offset-md-1 col-sm-12 offset-sm-0 text-center">
+        <img
+          class="bretagne"
+          alt=""
+          src="/assets/images/website/page-dm/servir/pastille-partenaire-lepoool-2025.png"
+        />
+      </div>
+      <div class="col-md-6 col-sm-12">
+        <h2>Partenaire Le Poool x La French Tech</h2>
+        <p klass="text-justify">
+          Nous sommes fiers de partager notre savoir-faire et expertise dans le
+          domaine numérique en tant que partenaire Le Poool x La French Tech
+          Rennes Saint-Malo.
+        </p>
+      </div>
+    </div>
+
     <hr />
 
     <div class="row align-items-center dm-item sm-remove-img">
