feat: use breizh-data-day and adn-ouest logo

--- a/pages/dev-machine.html
+++ b/pages/dev-machine.html
@@ -277,7 +277,7 @@ order: 3
             <img
               title="ADN’Ouest"
               alt="ADN’Ouest"
-              src="/assets/images/website/page-dm/local/professionnels/adn-ouest.png"
+              src="/assets/images/website/page-dm/local/professionnels/adn-ouest-logo.svg"
             />
           </div>
         </div>
@@ -296,6 +296,11 @@ order: 3
               title="Meetup Software Crafts-wo-manship de Rennes"
               alt="meetup Software Crafts-wo-manship de Rennes"
               src="/assets/images/website/page-dm/local/technologiques/craftmanship.jpeg"
+            />
+            <img
+              title="Breizh Data Day"
+              alt="Breizh Data Day"
+              src="/assets/images/website/page-dm/local/technologiques/pastille-breizh-data-day.png"
             />
           </div>
         </div>
